argocd-apps/weather/deployment.yaml
# K8s manifests for the lightweight weather microservice.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deployment
  namespace: weather
  labels:
    app: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: workload
                    operator: In
                    values: [apps]
      containers:
      - name: weather
        image: ghcr.io/brar-karamjit/weather-service:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: weather
spec:
  selector:
    app: weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

# a simple ingress so the app can be accessed externally if desired
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: weather.karamjitbrar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-service
            port:
              number: 80
  tls:
  - secretName: weather-tls
    hosts:
    - weather.karamjitbrar.com
